# speech_emotion_csrc

./: CMakeLists.txt
include/: audio_utils.h  thingx_emotion_recognition.h
jni/: AudioUtilsJNI.cpp
src/: thingx_emotion_recognition.cpp
